# firestore-schema

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_integration.py
tests/unit/: __init__.py  test_cli.py  test_collection_processing.py  test_database_exploration.py  test_export.py  test_field_description.py  test_init.py  test_timeout.py  test_type_handling.py
